third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/from_str/invalid_custom_error_attribute.rs
#[derive(derive_more::FromStr)]
#[from_str(error(CustomError, CustomError::new, CustomError::from))]
pub enum Foo {
    Bar,
}

#[derive(derive_more::FromStr)]
#[from_str(error(CustomError, CustomError::from, CustomError::new))]
struct Baz;

#[derive(derive_more::FromStr)]
#[from_str(error())]
struct Empty;

fn main() {}
